temporal convolution updated with additional layers and residual blocks

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ cnn_results
 benchmark_results
 dnn_results
 lstm_new_results
+cnn_new_results
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
