--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ benchmark_results
 dnn_results
 lstm_new_results
 cnn_new_results
+combined_nn_results
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
