adding notebook for SWIS data processing for DNNs

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ conventional_lstm
 conventional_cnn
 conventional_tcn
 all_ts_data
+swis_ts_data
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
